examples/apps/whoami/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 250m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 24Mi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
